# ipcc-chat

./: README.md
pocs/langchain-dataframe-agent/: SYR_Figure_SPM2.h5  agent.py  pyproject.toml  temps.db
pocs/tapas/: SYR_Figure_SPM.2a_cmip6_TXx_change_at_2.0C.nc  SYR_Figure_SPM.2a_cmip6_TXx_change_at_4.0C.nc  SYR_Figure_SPM.2b_cmip6_SM_tot_change_at_1.5C.nc  SYR_Figure_SPM.2c_cmip6_Rx1day_change_at_1.5C.nc  SYR_Figure_SPM.2c_cmip6_Rx1day_change_at_2.0C.nc  SYR_Figure_SPM.2c_cmip6_Rx1day_change_at_3.0C.nc  SYR_Figure_SPM.2c_cmip6_Rx1day_change_at_4.0C.nc  SYR_Figure_SPM2-original-column-names.h5  SYR_Figure_SPM2.db  SYR_Figure_SPM2.h5  SYR_Figure_SPM2_at_1.5C.h5  SYR_Figure_SPM2_at_2.0C.h5  SYR_Figure_SPM2_at_3.0C.h5  SYR_Figure_SPM2_at_4.0C.h5  demo.py  geocode_cache.db  geopy-poc.py  pyproject.toml  temp-soil-rain-merge.py  temp-soil-rain-overlap.py
sources/sixth-assessment-report-cycle/: AR6 Synthesis Report_ Summary for Policymakers Headline Statements.html
sources/sixth-assessment-report-cycle/AR6 Synthesis Report_ Summary for Policymakers Headline Statements_files/: css  gtm.js  webpack-runtime-812db2f9e1d01f64d793.js
sources/sixth-assessment-report-cycle/IPCC_AR6_SYR_SPM/: figure-spm-1.txt  figure-spm-2.txt  figure-spm-3.txt
sources/sixth-assessment-report-cycle/IPCC_AR6_SYR_SPM/datasets/: SYR_Figure_SPM.2a_cmip6_TXx_change_at_1.5C.nc  SYR_Figure_SPM.2a_cmip6_TXx_change_at_3.0C.nc  SYR_Figure_SPM.2b_cmip6_SM_tot_change_at_2.0C.nc  SYR_Figure_SPM.2b_cmip6_SM_tot_change_at_3.0C.nc  (+1 more)
sources/sixth-assessment-report-cycle/pocs/: demo.py
